# Snip

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PLAN.md  README.md  pyproject.toml
.claude/commands/: gcp-secrets.md  lint-all.md  new-api-resource.md  new-backend-app.md  new-frontend-page.md  new-package.md  secrets.md  upgrade-python.md  values.md
.claude/rules/: backend-conventions.md  e2e-conventions.md  frontend-conventions.md  package-conventions.md
.claude/skills/: fastapi-app-anatomy.md  provider-package-anatomy.md  uv-workspace-ops.md
.devops/: Makefile
.devops/images/nginx/: Dockerfile
.devops/images/node/: .trivyignore  Dockerfile
.devops/images/python/: Dockerfile
.devops/pkl/schemas/: Secrets.pkl  ServiceSpec.pkl
.devops/pkl/secrets/: global.pkl
.devops/pkl/values/: global.pkl
.devops/scripts/: generate.sh
.devops/secrets/: global.yaml
.devops/services/click-worker/: service.yaml
.devops/services/frontend/: service.yaml
.devops/services/migrate/: service.yaml
.devops/services/redirect/: service.yaml
.devops/values/: global.yaml
.devops/values/pre-prod/: global.yaml
.devops/values/prod/: global.yaml
.github/actions/execute-cloud-run-job/: action.yml  package.json  script.js
.github/actions/prune-revisions/: action.yml  package.json  pnpm-lock.yaml  script.js
.github/actions/wait-for-deploy/: action.yml  package.json  script.js
.github/actions/wait-for-migrate/: action.yml  package.json  script.js
.github/actions/wait-for-terraform/: action.yml  package.json  script.js
.github/workflows/: analytics.yml  auth.yml  base-images.yml  click-worker.yml  dashboard-backend.yml  dashboard-frontend.yml  db.yml  deploy-all.yml  devops-config.yml  e2e.yml  email.yml  logger.yml  migrate.yml  og-image.yml  queue.yml  redirect-service.yml  security.yml  storage.yml  telemetry.yml  terraform.yml
apps/click-worker/: Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
apps/click-worker/src/click_worker/: cli.py  config.py  dependencies.py  main.py
apps/click-worker/src/click_worker/routers/: ingest.py
apps/click-worker/tests/unit/routers/: test_ingest_router.py
apps/dashboard-backend/: .env.example  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
apps/dashboard-backend/src/dashboard_backend/: clerk.py  cli.py  config.py  dependencies.py  exceptions.py  main.py
apps/dashboard-backend/src/dashboard_backend/clients/: __init__.py  clerk_client.py
apps/dashboard-backend/src/dashboard_backend/managers/: __init__.py  clicks_manager.py  feature_flag_manager.py  link_manager.py  notification_manager.py  redirect_manager.py  seed_manager.py
apps/dashboard-backend/src/dashboard_backend/routers/: clicks.py  flags.py  links.py  og_image.py  redirect.py  seed.py  stats.py
apps/dashboard-backend/src/dashboard_backend/stores/: __init__.py  base_store.py  click_event_store.py  feature_flag_store.py  link_store.py
apps/dashboard-backend/tests/: conftest.py
apps/dashboard-backend/tests/unit/: test_cors.py  test_dependencies.py  test_exceptions.py
apps/dashboard-backend/tests/unit/base/: base_api_test.py
apps/dashboard-backend/tests/unit/clients/: test_clerk_client.py
apps/dashboard-backend/tests/unit/dependencies/: test_get_auth_client.py  test_get_current_user.py  test_manager_factories.py  test_store_factories.py
apps/dashboard-backend/tests/unit/managers/: base_link_manager.py  test_clicks_manager.py  test_feature_flag_manager.py  test_link_manager.py  test_link_manager_create.py  test_link_manager_get_update_delete.py  test_link_manager_list.py  test_notification_manager.py  test_redirect_manager.py  test_seed_manager.py
apps/dashboard-backend/tests/unit/routers/: test_clicks_router.py  test_exception_handlers.py  test_flags_router.py  test_health_router.py  test_link_validation.py  test_links_router.py  test_redirect_router.py  test_routers.py  test_seed_router.py  test_stats_router.py
apps/dashboard-backend/tests/unit/stores/: base_click_event.py  base_link_store.py  test_click_event_store.py  test_click_event_store_create.py  test_click_event_store_delete.py  test_click_event_store_queries.py  test_feature_flag_store.py  test_link_store.py  test_link_store_create.py  test_link_store_delete.py  test_link_store_get.py  test_link_store_list.py  test_link_store_stats.py  test_link_store_update.py
apps/dashboard-frontend/: Dockerfile  Makefile  README.md  biome.json  components.json  docker-entrypoint.sh  index.html  nginx.conf  nginx.conf.template  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/dashboard-frontend/src/: globals.css  main.tsx  routeTree.gen.ts
apps/e2e/: .env.example  .gitignore  Makefile  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
apps/redirect-service/: .env.example  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
apps/redirect-service/src/redirect_service/: cli.py  config.py  crawler_detection.py  dependencies.py  exceptions.py  main.py
apps/redirect-service/src/redirect_service/managers/: redirect_manager.py
apps/redirect-service/src/redirect_service/routers/: redirect.py
apps/redirect-service/tests/unit/: test_crawler_detection.py  test_dependencies.py
apps/redirect-service/tests/unit/managers/: test_redirect_manager.py
apps/redirect-service/tests/unit/routers/: test_redirect_router.py
dev/: .env.example  docker-compose.yml
plans/: cleanup-me-west1.md  terraform-infrastructure.md
scripts/: seed_dev_data.py
security/: Makefile  pyproject.toml
security/src/snip_security/: __init__.py
terraform/: .checkov.yml  .env.example  Makefile  pyproject.toml  root.hcl
terraform/_envcommon/: analytics.hcl  ci-oidc.hcl  cloud-run-frontend.hcl  cloud-run-migrate.hcl  cloudflare-dns.hcl  config.hcl  database.hcl  networking.hcl  project.hcl  queue.hcl  secrets.hcl  storage.hcl
terraform/bootstrap/: main.tf
terraform/environments/pre-prod/: env.hcl
terraform/environments/prod/: env.hcl
terraform/modules/analytics/: main.tf  outputs.tf  (+1 more)
(+192 files in other folders)
