[project]
name = "click-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "snip-queue",
    "snip-analytics",
    "snip-logger",
    "snip-telemetry[fastapi,httpx,grpc]",
    "fastapi[standard]",
    "pydantic-settings",
    "google-auth>=2.0",
]

[project.scripts]
worker-dev = "click_worker.cli:dev"
worker-serve = "click_worker.cli:serve"

[dependency-groups]
dev = ["httpx"]

[tool.uv.sources]
snip-queue = { workspace = true }
snip-analytics = { workspace = true }
snip-logger = { workspace = true }
snip-telemetry = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "UP006", "UP007", "UP035", "UP045"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = ["src/click_worker/cli.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
