[project]
name = "dashboard-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "snip-db[pg]",
    "fastapi[standard]",
    "pydantic-settings",
    "httpx",
    "python-jose[cryptography]",
    "shortuuid",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "httpx", "ruff", "aiosqlite"]

[tool.uv.sources]
snip-db = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",   # Depends() in function defaults is standard FastAPI pattern
    "UP006",  # Keep typing.List/Dict/Tuple for Python 3.12 runtime compat
    "UP007",  # Keep Optional[X] for Python 3.12 runtime compat
    "UP035",  # Keep typing.List/Dict/Tuple imports for Python 3.12 runtime compat
    "UP045",  # Keep Optional[X] for Python 3.12 runtime compat
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
