[project]
name = "dashboard-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "snip-db[pg]",
    "snip-email",
    "snip-auth",
    "snip-logger",
    "snip-telemetry[fastapi,sqlalchemy,httpx]",
    "snip-storage",
    "snip-og-image",
    "fastapi[standard]",
    "pydantic-settings",
    "httpx",
    "shortuuid"
]

[project.scripts]
dashboard-dev = "dashboard_backend.cli:dev"
dashboard-serve = "dashboard_backend.cli:serve"

[dependency-groups]
dev = ["httpx", "aiosqlite"]

[tool.uv.sources]
snip-db = { workspace = true }
snip-email = { workspace = true }
snip-auth = { workspace = true }
snip-logger = { workspace = true }
snip-telemetry = { workspace = true }
snip-storage = { workspace = true }
snip-og-image = { workspace = true }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",   # Depends() in function defaults is standard FastAPI pattern
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = ["src/dashboard_backend/exceptions.py", "src/dashboard_backend/cli.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
