[project]
name = "redirect-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "snip-db[pg]",
    "snip-queue",
    "snip-logger",
    "fastapi[standard]",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "httpx", "ruff", "aiosqlite", "pyright>=1.1.400"]

[tool.uv.sources]
snip-db = { workspace = true }
snip-queue = { workspace = true }
snip-logger = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "UP006", "UP007", "UP017", "UP035", "UP045"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
