[project]
name = "redirect-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "snip-db[pg]",
    "snip-queue",
    "snip-logger",
    "snip-telemetry[fastapi,sqlalchemy,grpc]",
    "fastapi[standard]",
    "pydantic-settings",
]

[project.scripts]
redirect-dev = "redirect_service.cli:dev"
redirect-serve = "redirect_service.cli:serve"

[dependency-groups]
dev = ["httpx", "aiosqlite"]

[tool.uv.sources]
snip-db = { workspace = true }
snip-queue = { workspace = true }
snip-logger = { workspace = true }
snip-telemetry = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "UP006", "UP007", "UP017", "UP035", "UP045"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = ["src/redirect_service/cli.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
